in-article nav styling applied

--- a/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -134,16 +134,18 @@ Can the Royal Statistical Society help non-tech companies embrace large language
 Want to hear more from the RSS Data Science and AI Section? Sign up for its newsletter at [rssdsaisection.substack.com](https://rssdsaisection.substack.com/).
 :::
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: {.article-btn}
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Back to Careers](/careers/index.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: {.article-btn}
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Read part two &rarr;](/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd)
+:::
 :::
 :::
 :::
