--- a/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
+++ b/careers/posts/2023/05/18/chatgpt-data-science-pt2.qmd
@@ -120,16 +120,18 @@ For me, the question is not, 'Do we understand how ChatGPT works?' We don't unde
 Want to hear more from the RSS Data Science and AI Section? Sign up for its newsletter at [rssdsaisection.substack.com](https://rssdsaisection.substack.com/).
 :::
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: {.article-btn}
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [&larr; Read part one](/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: {.article-btn}
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Back to Careers](/careers/index.qmd)
+:::
 :::
 :::
 :::
