article upload, article button links resolved

--- a/index.qmd
+++ b/index.qmd
@@ -161,7 +161,7 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ## In data science, it’s important to not lose sight of fundamentals such as statistics and mathematics. A lot of people can code-up models but it’s fair to say that only a portion of them appreciate how to do this responsibly.
 Tamanna Haque, lead data scientist at Jaguar Land Rover
 
-::: {.button .button1}
+::: {.button}
 [Read Tamanna's career profile](careers/career-profiles/posts/2023/03/28/tamanna-haque.qmd)
 :::
 
@@ -203,7 +203,7 @@ Tamanna Haque, lead data scientist at Jaguar Land Rover
 ## Open science and reproducible research is really hard, and it requires a lot of technical knowledge. But you don’t have to be perfect right away. Going one step in the right direction is super important. 
 Heidi Seibold on why open science is 'just good science in the digital era'
 
-::: {.button .button1}
+::: {.button}
 [Watch the interview](viewpoints/interviews/posts/02/03/heidi-seibold.qmd)
 :::
 
