--- a/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
+++ b/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
@@ -1,5 +1,5 @@
 ---
-title: "xxxx"
+title: "'For me, data science is about bridging the gap between business requirements and the data that businesses have'"
 description: |
   Jasmine Holdsworth 'fell in love' with data science while employed as a data analyst at Stack Overflow. Now working as a data scientist at Expedia Group, she explains how inspiring mentors, R-Ladies meetups, and a commitment to learning (and teaching) helped shape her career path.   
 categories:
@@ -29,7 +29,20 @@ I would probably call myself more on the analyst side. So, while my day-to-day j
 More in an analyst role, but probably about seven years now, I began in Stack Overflow just as a data analyst, and then worked at DAZN -- which is like a Netflix for sports -- as a data analyst, and then joined here as a senior analyst, and then moved into data science in the last couple of years. I would, I would credit Stack Overflow as the place where my career kind of was birthed, if you like. I started there as an account manager, so with hardly any technical background at all required, and then moved into a role that was essentially looking after, or reporting the metrics of advertising campaigns for companies that would advertise on Stack Overflow. So that required a little technical knowledge, not much -- a few pivot tables and things like that. But then the longer I stayed there, the further my career developed, and they had, at the time -- probably still do -- some fantastically smart people that work there, as you can imagine. I was sponsored to do a General Assembly data analytics course, which was focused around Excel, dashboarding, and SQL and essentially fell in love with data analysis. It was the most technical subject matter that I had experienced to that point, and I found a real natural affinity to it, particularly SQL. And then [I] moved into more of a data analyst role within Stack Overflow, so -- as you can probably imagine -- an absolute sea of proprietary data that needed analysing, and started learning R, or rather being taught R within Stack Overflow, and loved it. I think I was there for three-and-a-half years, and then moved into a data analyst role at DAZN. At this point, I did a data science General Assembly bootcamp course, and fell in love with that. And then I decided that I really loved General Assembly as a concept; I actually started a second job teaching there, so the courses that I had previously taken I was now teaching, first as a teaching assistant, and then as a lead instructor, which was one of the most, yeah, one of the most amazing experiences I've had actually, I learned a lot from that. And then I got a job as a senior analyst within Expedia Group, which is where I am now, and then moved into a data science role, which is what I'm doing currently. So, I actually left school at 16, and had to go into a full-time employment. And the General Assembly education that I took a part in was my first of that type. So, when I realised that data science was absolutely something that I really wanted to dedicate the rest of my life to, I decided to take on a part-time data science bachelor's degree, which I am now about a year away from finishing. Because I'm doing it part time it takes a bit longer. But yeah, so I will have my data science bachelor's completed, hopefully, by 2024.  
 
 ### Who or what inspired you to work in data science?
-There were two big inspirations into getting into data sciences. So, they were actually the data scientists that I worked with at Stack Overflow. They were the first two data scientists, I believe, that Stack Overflow had ever hired. I worked very closely with them as an analyst and one of them was, had previously worked -- I don't know if it was officially an astrophysicist -- but had studied black holes, and I remember thinking that was just amazing. And the other was, was very famous within the field. And they spent a lot of time giving me one-on-one training on R and SQL and basic analysis, and I was so inspired by these two individuals that I, it was also a career path that I didn't really know existed.  
+There were two big inspirations into getting into data sciences. So, they were actually the data scientists that I worked with at Stack Overflow. They were the first two data scientists, I believe, that Stack Overflow had ever hired. I worked very closely with them as an analyst and one of them was, had previously worked -- I don't know if it was officially an astrophysicist -- but had studied black holes, and I remember thinking that was just amazing. And the other was, was very famous within the field. And they spent a lot of time giving me one-on-one training on R and SQL and basic analysis, and I was so inspired by these two individuals that I, it was also a career path that I didn't really know existed.
+
+::: {.pullquote-container}
+::: grid
+::: {.g-col-12 .g-col-lg-4}
+![](images/jh-photo.png){fig-alt="Portrait photo of Jasmine Holdsworth" fig-align="left"}
+::: 
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
+![](/images/pullquote-purple.png){width="50px"}
+
+What was impressed upon me in that first year [in data science] was the importance of statistics and interpreting statistics in a way that's honest.
+:::
+:::
+:::
 
 ### What does data science mean to you?
 For me, it is bridging the gap between the business requirements and the data that businesses have. So, you'll have business goals, requirements that kind of come down the line and there's a lot of data that's being collected, and, essentially, you have to try and be the bridge between the two. So, not just doing very complicated analyses, with very sophisticated models -- at least not in my role -- it's about being able to create analysis that's interpretable, that you can present to non-technical stakeholders that they're going to understand to a degree. So, I do know that in different roles in different companies, it will be slightly different. But yeah, for me, it's about making data, yeah, interpretable, to the non-technical stakeholders to enable them to do their job better.  
@@ -44,7 +57,7 @@ Towards the beginning of my career to say -- 5, 6 years ago -- it was quite hard
 Actually, I guess the story of how I joined Expedia is quite relevant in that way. So, I presented some, just some fun analysis that I did at an R-Ladies meetup, and I was already talking to a recruiter within Expedia Group and I said to them, oh, well, I happen to be visiting your offices to present at this meetup, so maybe I can meet you there. And they actually sent the manager of the team that they wanted me to join. So, this manager attended the meetup, watched me present, and then they ended up hiring me, which is really great. But I do really think that that was a result of being able to see me on stage, talking about stuff that I had done, showing code that I had written, and it kind of bypassed a few steps. So yeah, I would definitely say meetups and connections are very helpful to overcome that.  
 
 ### What was the most important lesson from your first year in data science?
-I think that what was impressed upon me in that first year -- and what really drove me to do the bootcamp courses and then, ultimately, the degree -- above everything, actually, was the importance of statistics and interpreting statistics in a way that's honest. So, I feel like-- I feel like with coding, that comes quite naturally to me, and writing SQL queries, R, that was all kind of fine. That didn't require a lot. But I really, I had an amazing manager who taught me a lot about, essentially, if you're going to go and speak to this company about the campaign that they've run on our on our website, then you need to impress that X doesn't necessarily mean Y, it just gives evidence to, or alludes to, and essentially just making sure that how you're communicating thing is as accurate as possible.  
+I think that what was impressed upon me in that first year -- and what really drove me to do the bootcamp courses and then, ultimately, the degree -- above everything, actually, was the importance of statistics and interpreting statistics in a way that's honest. So, I feel like-- I feel like with coding, that comes quite naturally to me, and writing SQL queries, R, that was all kind of fine. That didn't require a lot. But I really, I had an amazing manager who taught me a lot about, essentially, if you're going to go and speak to this company about the campaign that they've run on our on our website, then you need to impress that X doesn't necessarily mean Y, it just gives evidence to, or alludes to, and essentially just making sure that how you're communicating things is as accurate as possible.  
 
 ### Any mistakes or regrets in your career so far?
 When I look back on my career, I think the things that have really stayed with me that I've really learned from, mistakes wise, are around small little mistakes around how you interpret data. Maybe it was a, like, years ago, summing the wrong cell in Excel but not checking two or three or four times before that goes out. I'm now quite-- I over-check everything. I think that the most important part of our job, as well as being the translation, is being the correct translation. You need to be reliable. People need to know that if you put out analysis that they can trust you. So, I would say I regret every small, tiny little data error that I ever made, which I can't even recall right now, but I know have kind of cumulated enough that it has made me a very fastidious checker, I suppose.  
@@ -74,7 +87,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'I always thought someone like me couldn't work in data, let alone data science.'" Real World Data Science, April 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/04/24/sami-rahman.html)
+: Tarran, Brian. 2023. "'For me, data science is about bridging the gap between business requirements and the data that businesses have'" Real World Data Science, May 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.html)
 :::
 :::
 :::
