--- a/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
+++ b/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd
@@ -34,7 +34,7 @@ There were two big inspirations into getting into data sciences. So, they were a
 ::: {.pullquote-container}
 ::: grid
 ::: {.g-col-12 .g-col-lg-4}
-![](images/jh-photo.png){fig-alt="Portrait photo of Jasmine Holdsworth" fig-align="left"}
+![Jasmine Holdsworth](images/jh-photo.png){fig-alt="Portrait photo of Jasmine Holdsworth" fig-align="left"}
 ::: 
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
@@ -56,8 +56,8 @@ Towards the beginning of my career to say -- 5, 6 years ago -- it was quite hard
 ### How did you overcome those hurdles?
 Actually, I guess the story of how I joined Expedia is quite relevant in that way. So, I presented some, just some fun analysis that I did at an R-Ladies meetup, and I was already talking to a recruiter within Expedia Group and I said to them, oh, well, I happen to be visiting your offices to present at this meetup, so maybe I can meet you there. And they actually sent the manager of the team that they wanted me to join. So, this manager attended the meetup, watched me present, and then they ended up hiring me, which is really great. But I do really think that that was a result of being able to see me on stage, talking about stuff that I had done, showing code that I had written, and it kind of bypassed a few steps. So yeah, I would definitely say meetups and connections are very helpful to overcome that.  
 
-### What was the most important lesson from your first year in data science?
-I think that what was impressed upon me in that first year -- and what really drove me to do the bootcamp courses and then, ultimately, the degree -- above everything, actually, was the importance of statistics and interpreting statistics in a way that's honest. So, I feel like-- I feel like with coding, that comes quite naturally to me, and writing SQL queries, R, that was all kind of fine. That didn't require a lot. But I really, I had an amazing manager who taught me a lot about, essentially, if you're going to go and speak to this company about the campaign that they've run on our on our website, then you need to impress that X doesn't necessarily mean Y, it just gives evidence to, or alludes to, and essentially just making sure that how you're communicating things is as accurate as possible.  
+### The most important lesson from your first year in data science?
+I think that what was impressed upon me in that first year -- and what really drove me to do the bootcamp courses and then, ultimately, the degree -- above everything, actually, was the importance of statistics and interpreting statistics in a way that's honest. So, I feel like-- I feel like with coding, that comes quite naturally to me, and writing SQL queries, R, that was all kind of fine. That didn't require a lot. But I really, I had an amazing manager who taught me a lot about, essentially, if you're going to go and speak to this company about the campaign that they've run on our website, then you need to impress that X doesn't necessarily mean Y, it just gives evidence to, or alludes to, and essentially just making sure that how you're communicating things is as accurate as possible.  
 
 ### Any mistakes or regrets in your career so far?
 When I look back on my career, I think the things that have really stayed with me that I've really learned from, mistakes wise, are around small little mistakes around how you interpret data. Maybe it was a, like, years ago, summing the wrong cell in Excel but not checking two or three or four times before that goes out. I'm now quite-- I over-check everything. I think that the most important part of our job, as well as being the translation, is being the correct translation. You need to be reliable. People need to know that if you put out analysis that they can trust you. So, I would say I regret every small, tiny little data error that I ever made, which I can't even recall right now, but I know have kind of cumulated enough that it has made me a very fastidious checker, I suppose.  
@@ -87,7 +87,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "'For me, data science is about bridging the gap between business requirements and the data that businesses have'" Real World Data Science, May 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.html)
+: Tarran, Brian. 2023. "'For me, data science is about bridging the gap between business requirements and the data that businesses have.'" Real World Data Science, May 24, 2023. [URL](https://realworlddatascience.net/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.html)
 :::
 :::
 :::
