--- a/index.qmd
+++ b/index.qmd
@@ -107,6 +107,18 @@ listing:
     filter-ui: false
     max-items: 3
     feed: false
+
+  - id: career-profiles
+    contents: 
+    - /careers/career-profiles
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 toc: false
 ---
 ::: {.content-container}
@@ -158,11 +170,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Open science and reproducible research is really hard, and it requires a lot of technical knowledge. But you don’t have to be perfect right away. Going one step in the right direction is super important. 
-Heidi Seibold on why open science is 'just good science in a digital era'
+## [Laws and regulations] are important, they’re necessary, but they’re insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people who can see something and sound the alarm and go, ‘Wait a minute, hang on. That’s not okay.’
+Stephanie Hare on why we need a culture of technology ethics
 
 ::: {.button}
-[Watch the interview](viewpoints/interviews/posts/02/03/heidi-seibold.qmd)
+[Listen to the interview](viewpoints/interviews/posts/04/28/stephanie-hare.qmd)
 :::
 
 :::
@@ -171,12 +183,12 @@ Heidi Seibold on why open science is 'just good science in a digital era'
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Editors' Blog
+## Interviews
 </a> 
 
-::: {#editors-blog}
+::: {#interviews}
 :::
 
 :::
@@ -213,12 +225,25 @@ Sami Rahman, head of data engineering and data platform at Penguin Random House
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
+<a href="careers/career-profiles/index.qmd">
 
-## Interviews
+## Career profiles 
+</a>
+
+::: {#career-profiles}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="viewpoints/editors-blog/index.qmd">
+
+## Editors' Blog
 </a> 
 
-::: {#interviews}
+::: {#editors-blog}
 :::
 
 :::
