--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!jasmine-holdsworth.qmd"
+    - "!future.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -123,15 +123,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/career-profiles/posts/2023/05/24/jasmine-holdsworth.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/05/26/future.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'For me, data science is about bridging the gap between business requirements and the data that businesses have'
-Jasmine Holdsworth, data scientist at Expedia Group, explains how inspiring mentors, R-Ladies meetups, and a commitment to learning (and teaching) helped shape her career path.
+## What's the future of data science and AI in an LLM world?
+Osama Rahman, director of the Data Science Campus at the UK Office for National Statistics, shared his thoughts on the past, present, and future of data science at a recent event. Here are our key takeaways.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/05/24/images/jh-photo.png)
+![](viewpoints/editors-blog/posts/2023/05/26/images/binoculars.png)
 :::
 :::
 
