embed-resources for sharing

--- a/case-studies/posts/2023/05/XXX/making-DL-reproducible.qmd
+++ b/case-studies/posts/2023/05/XXX/making-DL-reproducible.qmd
@@ -12,9 +12,9 @@ date: 05/XX/2023
 toc: true
 # image: images/google-deepmind-52afknBiUk4-unsplash.png
 # image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
-# format:
-#   html:
-#     embed-resources: true
+format:
+  html:
+    embed-resources: true
 ---
 :::{layout-ncol=3}
 ![](images/header-1.png)
