--- a/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
@@ -18,14 +18,14 @@ format:
 ---
 ::: {.callout-important}
 ## Disclaimer
-The findings and conclusions in this presentation are those of the authors and should not be construed to represent any official USDA or US Government determination or policy. This research was supported by the US Department of Agriculture’s Economic Research Service and Center for Nutrition, Policy and Promotion. Findings should not be attributed to IRI.
+The findings and conclusions in this publication are those of the authors and should not be construed to represent any official USDA or US Government determination or policy. This research was supported by the US Department of Agriculture’s Economic Research Service and Center for Nutrition, Policy and Promotion. Findings should not be attributed to IRI.
 :::
 
-About 600,000 deaths per year in the United States are related to poor dietary choices. Many other individuals suffer from diet-related health conditions, which may limit their ability to work, learn, and be physically active **[1]**. In recognition of the link between diet and health, in the 1970s the Senate Select Committee on Nutrition and Human Needs shifted its focus from eliminating hunger to improving eating habits, nutrition policy and the national diet. Since 1980 the Dietary Guidelines for Americans have been released every five years by the US Department of Agriculture (USDA) and the Department of Health and Human Services. The guidelines present “[advice on what to eat and drink to meet nutrient needs, promote health, and prevent disease](https://www.dietaryguidelines.gov/)”. 
+About 600,000 deaths per year in the United States are related to poor dietary choices. Many other individuals suffer from diet-related health conditions, which may limit their ability to work, learn, and be physically active **[1]**. In recognition of the link between diet and health, in 1974 the Senate Select Committee on Nutrition and Human Needs, originally formed to eliminate hunger, expanded its focus to improving eating habits, nutrition policy and the national diet. Since 1980 the Dietary Guidelines for Americans have been released every five years by the US Departments of Agriculture (USDA) and Health and Human Services (DHHS). The guidelines present “[advice on what to eat and drink to meet nutrient needs, promote health, and prevent disease](https://www.dietaryguidelines.gov/)”. 
 
 Because there can be economic and social barriers to maintaining a healthy diet, USDA promotes [Food and Nutrition Security](https://www.usda.gov/nutrition-security) so that everyone has consistent and equitable access to healthy, safe, and affordable foods that promote optimal health and well-being. A set of data tools called the [Purchase to Plate Suite](https://www.ers.usda.gov/data-products/purchase-to-plate/) (PPS) supports these goals by enabling the update of the [Thrifty Food Plan](https://www.fns.usda.gov/snap/thriftyfoodplan#:~:text=What%20is%20the%20Thrifty%20Food,lowest%20cost%20of%20the%20four.) (TFP), which estimates how much a budget-conscious family of four needs to spend on groceries to ensure a healthy diet. The TFP market basket – consisting of the specific amounts of various food categories required by the plan – forms the basis of the maximum allotment for the Supplemental Nutrition Assistance Program (SNAP, formerly known as the “Food Stamps” program), which provided financial support towards the cost of groceries for [over 41 million individuals in almost 22 million households in fiscal year 2022](https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap).
 
-The 2018 Farm Act (Agriculture Improvement Act of 2018) requires that USDA update the market basket of the TFP every five years using current food composition, consumption patterns, dietary guidance, and food prices, and using approved scientific methods. USDA’s Economic Research Service was charged with estimating the current food prices using retail food scanner data and utilized the PPS for this task. The most recent TFP update was released in August 2021 and the revised cost of the market basket was the first non-inflation adjustment increase in benefits for SNAP in over 40 years **[2]**.
+The 2018 Farm Act (Agriculture Improvement Act of 2018) requires that USDA reevaluate the TFP every five years using current food composition, consumption patterns, dietary guidance, and food prices, and using approved scientific methods. USDA’s Economic Research Service was charged with estimating the current food prices using retail food scanner data and utilized the PPS for this task. The most recent TFP update was released in August 2021 and the revised cost of the market basket was the first non-inflation adjustment increase in benefits for SNAP in over 40 years **[2]**.
 
 The PPS combines data sets to enhance research related to the economics of food and nutrition. There are four primary components of the suite:
 
@@ -34,28 +34,29 @@ The PPS combines data sets to enhance research related to the economics of food 
 -	Purchase to Plate National Average Prices (PP-NAP) for the National Health and Nutrition Examination Survey (NHANES); 
 -	Purchase to Plate Ingredient Tool (PPIT).
 
-The PPC allows researchers to measure the healthfulness of store purchases. PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the PP-NAP [(link once live)](link). The national average prices from PP-NAP are used in updating the TFP market basket cost. The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. More information on the development of the PPC is available in two papers by Carlson et al. **[3, 4]**. 
-The Food for Thought competition aimed to support the development of the PPC – and thus policy-oriented research – by linking retail food scanner data to the USDA nutrition data used to analyze NHANES dietary recall data, specifically the Food and Nutrient Database for Dietary Studies (FNDDS) **[5, 6]**. In particular, the competition set out to use artificial intelligence (AI) to reduce human resources in creating the links for the PPC, while still maintaining the high-quality standards required for estimating the TFP and for data published by ERS (which is one of 13 Principle Statistical Agencies in the United States Federal Government).
+The PPC allows researchers to measure the healthfulness of store purchases. PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the PP-NAP. The national average prices from PP-NAP are used in updating the TFP market basket cost. The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. More information on the development of the PPC is available in two papers by Carlson et al. **[3, 4]**.
+
+The Food for Thought competition aimed to support the development of the PPC – and thus policy-oriented research – by linking retail food scanner data to the USDA nutrition data used to analyze NHANES dietary recall data, specifically the Food and Nutrient Database for Dietary Studies (FNDDS) **[5, 6]**. In particular, the competition set out to use artificial intelligence (AI) to reduce human resources in creating the links for the PPC, while still maintaining the high-quality standards required for reevaluating the TFP and for data published by ERS (which is one of 13 Principle Statistical Agencies in the United States Federal Government).
 
 ## Methods used to date
-On the surface, the linking process may appear simple: both the FNDDS and retail food scanner data, [collated by the company IRI](https://www.ers.usda.gov/topics/food-markets-prices/food-prices-expenditures-and-establishments/using-proprietary-data/#iri), are databases of food. But the scanner data are produced for market research, and the FNDDS for dietary studies. The scanner data include about 350,000 items with sales each year, while the FNDDS has only 10,000–15,000 items.  Scanner data relates to specific products, while FNDDS items are often more general. To allow researchers to import the FNDDS nutrient data into the scanner data, a one-to-many match between FNDDS and scanner data items was needed. In addition, the food descriptions in the scanner data include brand names and package sizes and are written as a consumer would pronounce them – e.g., fresh and crisp broccoli florets, ready-cut, 10 oz – versus a more general FNDDS description such as “Broccoli, raw”. (Also linked to the “Broccoli, raw” code would be broccoli sold with stems attached, broccoli spears, and any other way raw broccoli is sold.) Before development of the PPC, there were no established linking identifiers.
+On the surface, the linking process may appear simple: both the FNDDS and retail food scanner data are databases of food. But the scanner data are produced for market research, and the FNDDS for dietary studies. The scanner data include about 350,000 items with sales each year, while the FNDDS has only 10,000–15,000 items.  Scanner data relates to specific products, while FNDDS items are often more general. To allow researchers to import the FNDDS nutrient data into the scanner data, a one-to-many match between FNDDS and scanner data items was needed. In addition, the food descriptions in the scanner data include brand names and package sizes and are written as a consumer would pronounce them – e.g., fresh and crisp broccoli florets, ready-cut, 10 oz – versus a more general FNDDS description such as “Broccoli, raw”. (Also linked to the “Broccoli, raw” code would be broccoli sold with stems attached, broccoli spears, and any other way raw broccoli is sold.) Before development of the PPC, there were no established linking identifiers.
 
 Figure 1 shows the process USDA uses to develop matches between scanner data and FNDDS. We start the linking process by creating homogeneous groups of items in the IRI product dictionary to make the first round of automated matching more efficient. To save time we use the categories created by IRI, which loosely follow the section of a grocery store – produce, canned beans, baking mixes, bread, etc. Once the linking categories for scanner data are established, we select appropriate items from the FNDDS. Since the FNDDS is highly structured, this selection is usually straightforward.
 
 [![](images/pt1-fig1.png){width="700px"}](images/pt1-fig1.png)
 
 :::{.figure-caption}
-**Figure 1:** Process currently used to create the matches between the USDA Food and Nutrient Database for Dietary Studies (FNDDS) and the IRI InfoScan and Consumer Network product dictionaries. Source: Author provided.
+**Figure 1:** Process currently used to create the matches between the USDA Food and Nutrient Database for Dietary Studies (FNDDS) and the retail scanner data (labelled "IRI" for the IRI InfoScan and Consumer Network) product dictionaries. Source: Author provided.
 :::
 
-Our next step is to use semantic matching to create a search table that aligns similar terms within the IRI product dictionary and FNDDS, and then use this table as the basis of a probabilistic matching process. The probabilistic match process returns the single best possible match for each item in the scanner data. Because these matches form the basis of major USDA policies, we cannot accept an error rate more than 5 percent, and lower is preferred. To reach that goal, nutritionists review every match. The correct matches are set aside while the incorrect matches are used to revise the search table, and the process begins again. After a few rounds, it is more efficient to use a manual match, established by one nutritionist and reviewed by another, after which the match is assumed to be correct.
+Our next step is to use semantic matching to create a search table that aligns similar terms within the IRI product dictionary and FNDDS, and then use this table as the basis of a probabilistic matching process. The probabilistic match process returns the single best possible match for each item in the scanner data. Because these matches form the basis of major USDA policies, we cannot accept an error rate of more than 5 percent, and lower is preferred. To reach that goal, nutritionists review every match. The correct matches are set aside while the incorrect matches are used to revise the search table, and the process begins again. After a few rounds, it is more efficient to use a manual match, established by one nutritionist and reviewed by another, after which the match is assumed to be correct.
 
 The process improved with each new wave of FNDDS and IRI data. Our first creation of the PPC linked the FNDDS 2011/12 to the 2013 IRI retail scanner data. Subsequent waves started with the previous search table and resulting matches were reviewed by nutritionists. We also used the IRI product dictionary structure to create the homogeneous linking groups and made modifications to these groups with each wave. During each wave we experimented with the number of rounds of probabilistic matching that was the most cost effective. For some linking groups it took less human time to manually match from the start, while for other groups it was more efficient to do multiple rounds of improvements to the search table. Starting with the most recent wave (matching FNDDS 2017/18 to the 2017 and 2018 retail scanner data), we assumed previous matches appearing in the newer data were correct. Although this assumption was good for most matches, a review demonstrated the need to review previous matches prior to removing the item from the list of scanner data items needing FNDDS matches. In the future we intend to explore methods developed by the participants of the Food for Thought competition.
 
 ## Linking challenges
 An ongoing challenge to the linking problem is that both the scanner data and the FNDDS undergo substantive changes each year, meaning that both the previous matches and search tables need to be reviewed and revised with each new effort, as tables that work with one cycle of FNDDS and scanner data will need revisions to use with the next cycle. Changes to the scanner data that impact our current method include dropped and added items, data corrections, and revisions to the categories that form the basis of the homogeneous linking groups. In addition, there are errors such as incorrect food descriptions, conflicting package size information, and changes in the item description from year to year. Since the FNDDS is designed to support dietary recall studies, revisions reflect both changes to available foods and the level of detail respondents can provide. These revisions result in dropped/added food codes, changes to food descriptions that impact which scanner data items match to the FNDDS items, and revisions to recipes used in the nutrient coding which impacts the number of retail ingredients available in the FNDDS.
 
-Of the four parts of the PPS, establishing the matches is the most time-consuming task and constitutes at least 60 percent of the total budget. In the most recent round, we had 168 categories and each one went through 2-3 automated matching rounds; after each round, nutritionists spent an average of two hours reviewing the matches. This adds up to somewhere between 670 and 1,000 hours of review time. After the automated review, manual matching requires an additional 300 hours. Reducing the amount of time required to establish matches and link the FNDDS and retail scanner data sets will result in faster data availability. That, in turn, will allow more timely policy-based research, while the mandated updates to the Thrifty Food Plan can continue with the most recent food price data.
+Of the four parts of the PPS, establishing the matches is the most time-consuming task and constitutes at least 60 percent of the total budget. In the most recent round, we had 168 categories and each one went through 2-3 automated matching rounds; after each round, nutritionists spent an average of two hours reviewing the matches. This adds up to somewhere between 670 and 1,000 hours of review time. After the automated review, manual matching requires an additional 300 hours. Reducing the amount of time required to establish matches and link the FNDDS and retail scanner data sets may lead to significant time savings, resulting in faster data availability. That, in turn, could allow more timely policy-based research, and the mandated revision of the Thrifty Food Plan can continue with the most recent food price data.
 
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
@@ -103,9 +104,9 @@ The research presented in this compendium supports the Purchase to Plate Suite o
 ## References
 1.	US Department of Agriculture, and US Department of Health and Human Services. 2020. Dietary Guidelines for Americans, 2020-2025, 9th Edition.
 2.	U.S. Department of Agriculture. 2021. Thrifty Food Plan, 2021, Food and Nutrition Service.
-3. 	Carlson, A.C., E.T. Page, T.P. Zimmerman, C.E. Tornow, and S. Hermansen. 2019. Linking USDA Nutrition Databases to Iri Household-Based and Store-Based Scanner Data, Technical Bulletin Number 1952, U.S. Department of Agriculture, Economic Research Service. .
-4.	Carlson, A.C., C.E. Tornow, E.T. Page, A. Brown McFadden, and T. Palmer Zimmerman. 2022. “Development of the Purchase to Plate Crosswalk and Price Tool: Estimating Prices for the National Health and Nutrition Examination Survey (Nhanes) Foods and Measuring the Healthfulness of Retail Food Purchases,” Journal of Food Composition and Analysis 106:104344.
-5.	U. S. Department of Agriculture, and Agricultural Research Service. 2018. USDA Food and Nutrient Databse for Dietary Studies 2015-16, 
-6.	U. S. Department of Agriculture, and Agricultural Research Service. 2020. USDA Food and Nutrient Databse for Dietary Studies 2017-18, 
-7.	Levin, D., D. Noriega, C. Dicken, A. Okrent, M. Harding, and M. Lovenheim. 2018. Examining Store Scanner Data: A Comparison of the Iri Infoscan Data with Other Data Sets, 2008-12, TB-1949, U.S. Department of Agriculture, Economic Research Service.
-8.	Muth, M.K., M. Sweitzer, D. Brown, K. Capogrossi, S. Karns, D. Levin, A. Okrent, P. Siegel, and C. Zhen. 2016. Understanding Iri Household-Based and Store-Based Scanner Data, TB-1942, U.S. Department of Agriculture, Economic Research Service.
+3. 	Carlson, A.C., E.T. Page, T.P. Zimmerman, C.E. Tornow, and S. Hermansen. 2019. Linking USDA Nutrition Databases to IRI Household-Based and Store-Based Scanner Data, Technical Bulletin Number 1952, U.S. Department of Agriculture, Economic Research Service.
+4.	Carlson, A.C., C.E. Tornow, E.T. Page, A. Brown McFadden, and T. Palmer Zimmerman. 2022. “Development of the Purchase to Plate Crosswalk and Price Tool: Estimating Prices for the National Health and Nutrition Examination Survey (NHANES) Foods and Measuring the Healthfulness of Retail Food Purchases,” Journal of Food Composition and Analysis 106:104344.
+5.	U. S. Department of Agriculture, and Agricultural Research Service. 2018. USDA Food and Nutrient Database for Dietary Studies 2015-16, 
+6.	U. S. Department of Agriculture, and Agricultural Research Service. 2020. USDA Food and Nutrient Database for Dietary Studies 2017-18, 
+7.	Levin, D., D. Noriega, C. Dicken, A. Okrent, M. Harding, and M. Lovenheim. 2018. Examining Store Scanner Data: A Comparison of the IRI Infoscan Data with Other Data Sets, 2008-12, TB-1949, U.S. Department of Agriculture, Economic Research Service.
+8.	Muth, M.K., M. Sweitzer, D. Brown, K. Capogrossi, S. Karns, D. Levin, A. Okrent, P. Siegel, and C. Zhen. 2016. Understanding IRI Household-Based and Store-Based Scanner Data, TB-1942, U.S. Department of Agriculture, Economic Research Service.
