embed-resources off

--- a/case-studies/posts/2023/05/XX/00-food-for-thought.qmd
+++ b/case-studies/posts/2023/05/XX/00-food-for-thought.qmd
@@ -12,9 +12,9 @@ date: 05/XX/2023
 toc: false
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
-format:
-  html:
-    embed-resources: true  
+# format:
+#   html:
+#     embed-resources: true  
 ---
 There’s a saying: “You are what you eat.” Its meaning is somewhat open to interpretation, as with many such sayings, but it’s typically used to make the point that if you want to *be* well, you need to eat well. Nutrition scientists and dieticians spend their careers trying to figure out what “eating well” looks like – the foods the human body needs, in what quantities, and how best to consume them. Their research informs advice and guidance issued by health professionals and governments. Ultimately, though, the choice of what to eat falls to us – individuals and families – and that choice is, in turn, informed by our tastes, the availability of foodstuffs in our local stores, and their price and affordability.
 
