--- a/case-studies/posts/2023/05/XX/03-first-place-winners.qmd
+++ b/case-studies/posts/2023/05/XX/03-first-place-winners.qmd
@@ -12,9 +12,9 @@ date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
-format:
-  html:
-    embed-resources: true  
+# format:
+#   html:
+#     embed-resources: true  
 ---
 The Auburn Big Data team from Auburn University consists of five members, including three assistant professors: Dr Wenying Li of the Department of Agricultural Economics and Rural Sociology, Dr Jingyi Zheng of the Department of Mathematics and Statistics, and Dr Shubhra Kanti Karmaker of the Department of Computer Science and Software Engineering. Additionally, the team comprises two PhD students, Naman Bansal and Alex Knipper, who are affiliated with Dr Karmaker's big data lab at Auburn University.  
 
