--- a/case-studies/posts/2023/05/XX/06-value-of-competitions.qmd
+++ b/case-studies/posts/2023/05/XX/06-value-of-competitions.qmd
@@ -12,9 +12,9 @@ date: 05/XX/2023
 toc: false
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
-format:
-  html:
-    embed-resources: true  
+# format:
+#   html:
+#     embed-resources: true  
 ---
 We are witnessing a sea change in data collection practices by both governments and businesses – from purposeful collection (through surveys and censuses, for example) to opportunistic (drawing on web and social media data, and administrative datasets). This shift has made clear the importance of record linkage – a government might, for example, look to link records held by its various departments in order to understand how citizens make use of the gamut of public services. 
 
