--- a/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
@@ -34,20 +34,22 @@ The PPS combines data sets to enhance research related to the economics of food 
 -	Purchase to Plate National Average Prices (PP-NAP) for the National Health and Nutrition Examination Survey (NHANES); 
 -	Purchase to Plate Ingredient Tool (PPIT).
 
-The PPC allows researchers to measure the healthfulness of store purchases. PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the PP-NAP. The national average prices from PP-NAP are used in updating the TFP market basket cost. The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. More information on the development of the PPC is available in two papers by Carlson et al. **[3, 4]**.
+The PPC allows researchers to measure the healthfulness of store purchases. PPC also forms the basis of the price tool, PPPT – which allows researchers to estimate custom prices for dietary recall studies – and a new ERS data product, the [PP-NAP](https://www.ers.usda.gov/data-products/purchase-to-plate/). The national average prices from PP-NAP are used in reevaluating the TFP. The final part of the Purchase to Plate Suite, the ingredient tool (PPIT), breaks dietary recall-reported foods back into purchasable ingredients, based on US retail food purchases. More information on the development of the PPC is available in two papers by Carlson et al. **[3, 4]**.
 
 The Food for Thought competition aimed to support the development of the PPC – and thus policy-oriented research – by linking retail food scanner data to the USDA nutrition data used to analyze NHANES dietary recall data, specifically the Food and Nutrient Database for Dietary Studies (FNDDS) **[5, 6]**. In particular, the competition set out to use artificial intelligence (AI) to reduce human resources in creating the links for the PPC, while still maintaining the high-quality standards required for reevaluating the TFP and for data published by ERS (which is one of 13 Principle Statistical Agencies in the United States Federal Government).
 
 ## Methods used to date
 On the surface, the linking process may appear simple: both the FNDDS and retail food scanner data are databases of food. But the scanner data are produced for market research, and the FNDDS for dietary studies. The scanner data include about 350,000 items with sales each year, while the FNDDS has only 10,000–15,000 items.  Scanner data relates to specific products, while FNDDS items are often more general. To allow researchers to import the FNDDS nutrient data into the scanner data, a one-to-many match between FNDDS and scanner data items was needed. In addition, the food descriptions in the scanner data include brand names and package sizes and are written as a consumer would pronounce them – e.g., fresh and crisp broccoli florets, ready-cut, 10 oz – versus a more general FNDDS description such as “Broccoli, raw”. (Also linked to the “Broccoli, raw” code would be broccoli sold with stems attached, broccoli spears, and any other way raw broccoli is sold.) Before development of the PPC, there were no established linking identifiers.
 
-Figure 1 shows the process USDA uses to develop matches between scanner data and FNDDS. We start the linking process by creating homogeneous groups of items in the IRI product dictionary to make the first round of automated matching more efficient. To save time we use the categories created by IRI, which loosely follow the section of a grocery store – produce, canned beans, baking mixes, bread, etc. Once the linking categories for scanner data are established, we select appropriate items from the FNDDS. Since the FNDDS is highly structured, this selection is usually straightforward.
+Figure 1 shows the process USDA uses to develop matches between scanner data and FNDDS. 
 
 [![](images/pt1-fig1.png){width="700px"}](images/pt1-fig1.png)
 
 :::{.figure-caption}
 **Figure 1:** Process currently used to create the matches between the USDA Food and Nutrient Database for Dietary Studies (FNDDS) and the retail scanner data (labelled "IRI" for the IRI InfoScan and Consumer Network) product dictionaries. Source: Author provided.
 :::
+
+We start the linking process by creating homogeneous groups of items in the IRI product dictionary to make the first round of automated matching more efficient. To save time we use the categories created by IRI, which loosely follow the section of a grocery store – produce, canned beans, baking mixes, bread, etc. Once the linking categories for scanner data are established, we select appropriate items from the FNDDS. Since the FNDDS is highly structured, this selection is usually straightforward.
 
 Our next step is to use semantic matching to create a search table that aligns similar terms within the IRI product dictionary and FNDDS, and then use this table as the basis of a probabilistic matching process. The probabilistic match process returns the single best possible match for each item in the scanner data. Because these matches form the basis of major USDA policies, we cannot accept an error rate of more than 5 percent, and lower is preferred. To reach that goal, nutritionists review every match. The correct matches are set aside while the incorrect matches are used to revise the search table, and the process begins again. After a few rounds, it is more efficient to use a manual match, established by one nutritionist and reviewed by another, after which the match is assumed to be correct.
 
@@ -84,6 +86,7 @@ About the authors
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
 :   © 2023 Andrea Carlson and Thea Palmer Zimmerman
+<!-- Check before publishing -->
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
 
