embed-resources on

--- a/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd
@@ -12,9 +12,9 @@ date: 05/XX/2023
 toc: true
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
-# format:
-#   html:
-#     embed-resources: true  
+format:
+  html:
+    embed-resources: true  
 ---
 ::: {.callout-important}
 ## Disclaimer
